--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -214,6 +214,15 @@
 }
 
 
+@online{js_websockets,
+ author = {Mozilla},
+ year = {2018},
+ title = {JavaScript Websocket API},
+ url = {https://developer.mozilla.org/en-US/docs/Web/API/WebSocket},
+ urldate = {2018-07-18}
+}
+
+
 @online{kestrel,
  author = {Dykstra, Tom and Ross, Chris and Halter, Stephen},
  year = {03.08.2017},
@@ -299,6 +308,15 @@
  title = {ASP.NET: Understanding OWIN, Katana, and the Middleware Pipeline},
  url = {http://johnatten.com/2015/01/04/asp-net-understanding-owin-katana-and-the-middleware-pipeline/},
  urldate = {2017-03-09}
+}
+
+
+@online{rxjs,
+ author = {Lesh, Ben and Driscoll, David and Jamieson, Nicholas and Kwon, O. J. and Taylor, Paul and Lee, Tracy},
+ year = {2018},
+ title = {RxJS},
+ url = {https://rxjs-dev.firebaseapp.com/},
+ urldate = {2018-07-18}
 }
 
 
