--- a/Report/setting/codestyle.tex
+++ b/Report/setting/codestyle.tex
@@ -76,10 +76,10 @@
 
 % JavaScript
 \lstdefinelanguage{JavaScript}{
-	morekeywords={ import, class, export, @NgModule, from, @Component, implements, extends,  @Input, @Output, new, return, @Pipe, public, private, interface, enum, @Injectable, constructor, declarations, imports, exports, providers,  schemas, bootstrap, export, true, false, any, void, @Inject}, % keywords
+	morekeywords={ import, class, export, @NgModule, from, @Component, implements, extends,  @Input, @Output, new, return, @Pipe, public, private, interface, enum, @Injectable, constructor, declarations, imports, exports, providers,  schemas, bootstrap, export, true, false, any, void, @Inject, this}, % keywords
 	basicstyle=\ttfamily \color{black} \small \smaller,
 	emphstyle={\color{vs_class}},
-	emph={ AssignmentSearchComponent, AssignmentEditComponent, PipeModule, ModalModule, TooltipModule, ModelViewModul, TimepickerModule, FormsModule, CommonModule, assignmentRouting, AssignmentComponent, AssignmentOverviewComponent, AssignmentService, AssignmentModule, NgModule, OnInit, NavItemComponent, Component, EventEmitter, Input, Output, AngularMenuItem, Pipe, PipeTransform, BooleanYesNoPipe, boolean, string, Injectable, ElectronService, MenuItemService, AngularMenuItem, Electron, MenuItem, BrowserModule, AppModule, MenuModule, AppComponent, AppRoutingModule, AuthGuard, HTTP_INTERCEPTORS, HttpClientErrorInterceptor, AuthenticationInterceptor, ElectronUrlInterceptor, CUSTOM_ELEMENTS_SCHEMA, RouterModule, ChangePasswordComponent, LoginComponent, RegisterComponent, ResetPasswordComponent, LogoutComponent, SecurityRoutingModule, HttpInterceptor, HttpRequest, Observable, Promise, Subject, HttpHandler, HttpEvent, AuthenticationService, SettingsService, MatDialog, FilePickerConfig, FilePickerDialogComponent, SettingsComponent, Inject, FilePickerService, MatDialogRef, MAT_DIALOG_DATA }, % classnames
+	emph={ AssignmentSearchComponent, AssignmentEditComponent, PipeModule, ModalModule, TooltipModule, ModelViewModul, TimepickerModule, FormsModule, CommonModule, assignmentRouting, AssignmentComponent, AssignmentOverviewComponent, AssignmentService, AssignmentModule, NgModule, OnInit, NavItemComponent, Component, EventEmitter, Input, Output, AngularMenuItem, Pipe, PipeTransform, BooleanYesNoPipe, boolean, string, Injectable, ElectronService, MenuItemService, AngularMenuItem, Electron, MenuItem, BrowserModule, AppModule, MenuModule, AppComponent, AppRoutingModule, AuthGuard, HTTP_INTERCEPTORS, HttpClientErrorInterceptor, AuthenticationInterceptor, ElectronUrlInterceptor, CUSTOM_ELEMENTS_SCHEMA, RouterModule, ChangePasswordComponent, LoginComponent, RegisterComponent, ResetPasswordComponent, LogoutComponent, SecurityRoutingModule, HttpInterceptor, HttpRequest, Observable, Promise, Subject, HttpHandler, HttpEvent, AuthenticationService, SettingsService, MatDialog, FilePickerConfig, FilePickerDialogComponent, SettingsComponent, Inject, FilePickerService, MatDialogRef, MAT_DIALOG_DATA, WebSocket, NotificationService, Observer, MessageEvent }, % classnames
 	showspaces=false,
 	showtabs=false,
 	breaklines=true,
