described electron general, started with electron apis

--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -1,5 +1,14 @@
 ﻿% This file was created with Citavi 5.7.1.0
 
+@online{aboutElectron,
+ author = {GitHub},
+ year = {2018},
+ title = {About Electron},
+ url = {https://electronjs.org/docs/tutorial/about},
+ urldate = {2018-07-23}
+}
+
+
 @online{angularCli,
  author = {Google},
  title = {Angular CLI},
@@ -79,6 +88,33 @@
  url = {http://blog.stephencleary.com/2012/02/async-and-await.html},
  address = {http://blog.stephencleary.com},
  urldate = {2018-02-02}
+}
+
+
+@online{atom,
+ author = {GitHub},
+ year = {2018},
+ title = {Atom},
+ url = {https://atom.io/},
+ urldate = {2018-07-23}
+}
+
+
+@online{atomShell,
+ author = {Sawicki, Kevin},
+ year = {2015},
+ title = {Atom Shell is now Electron},
+ url = {https://electronjs.org/blog/electron},
+ urldate = {2018-07-23}
+}
+
+
+@online{chromium,
+ author = {Google},
+ year = {2018},
+ title = {Chromium},
+ url = {https://www.chromium.org/Home},
+ urldate = {2018-07-23}
 }
 
 
@@ -175,6 +211,24 @@
 }
 
 
+@online{electron,
+ author = {GitHub},
+ year = {2018},
+ title = {Electron},
+ url = {https://electronjs.org/},
+ urldate = {2018-07-23}
+}
+
+
+@online{electronQuickStart,
+ author = {GitHub},
+ year = {2018},
+ title = {Writing your first Electron app: Electron development in a nutshell},
+ url = {https://electronjs.org/docs/tutorial/first-app#electron-development-in-a-nutshell},
+ urldate = {2018-07-23}
+}
+
+
 @online{fluentAPI,
  author = {Tutorials, Entity Framework},
  title = {Fluent API in Code-First},
@@ -185,7 +239,7 @@
 
 
 @online{fontAwesome,
- author = {Fonticons, Inc.},
+ author = {{Fonticons Inc.}},
  year = {2018},
  title = {Font Awesome},
  url = {https://fontawesome.com/},
@@ -290,6 +344,15 @@
  title = {Ng Modules},
  url = {https://angular.io/docs/ts/latest/guide/ngmodule.html},
  urldate = {2017-03-08}
+}
+
+
+@online{nodejs,
+ author = {{Node.js Foundation}},
+ year = {2018},
+ title = {Node.js},
+ url = {https://nodejs.org/en/},
+ urldate = {2018-07-23}
 }
 
 
