worked on Electron app, Node and IPC moved files a bit

--- a/Report/pages/body.tex
+++ b/Report/pages/body.tex
@@ -1,7 +1,7 @@
 % !TEX root=../report.tex
 
 \addsubpage{basics.tex}
-\addsubpage{angular/angular.tex}
-\addsubpage{electron/electron.tex}
+\addsubpage{angular.tex}
+\addsubpage{electron.tex}
 \addsubpage{asp/asp.tex}
 \addsubpage{deployment/deployment.tex}
