--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -220,6 +220,24 @@
 }
 
 
+@online{electronAppArch,
+ author = {GitHub},
+ year = {2018},
+ title = {Electron Application Architecture},
+ url = {https://electronjs.org/docs/tutorial/application-architecture},
+ urldate = {2018-07-24}
+}
+
+
+@online{electronArch,
+ author = {Poslek, Kristian},
+ year = {2015},
+ title = {Building a desktop application with Electron},
+ url = {https://medium.com/developers-writing/building-a-desktop-application-with-electron-204203eeb658},
+ urldate = {2018-07-24}
+}
+
+
 @online{electronQuickStart,
  author = {GitHub},
  year = {2018},
@@ -265,6 +283,24 @@
  title = {Inversion of Control Containers and the Dependency Injection pattern},
  url = {https://martinfowler.com/articles/injection.html},
  urldate = {2018-02-07}
+}
+
+
+@online{ipcMain,
+ author = {GitHub},
+ year = {2018},
+ title = {Electron ipcMain},
+ url = {https://electronjs.org/docs/api/ipc-main},
+ urldate = {2018-07-24}
+}
+
+
+@online{ipcRenderer,
+ author = {GitHub},
+ year = {2018},
+ title = {Electron ipcRenderer},
+ url = {https://electronjs.org/docs/api/ipc-renderer},
+ urldate = {2018-07-24}
 }
 
 
@@ -353,6 +389,24 @@
  title = {Node.js},
  url = {https://nodejs.org/en/},
  urldate = {2018-07-23}
+}
+
+
+@online{nodejsFS,
+ author = {{Node.js Foundation}},
+ year = {2018},
+ title = {Node.js fs Documentation},
+ url = {https://nodejs.org/api/fs.html},
+ urldate = {2018-07-24}
+}
+
+
+@online{nodejsOS,
+ author = {{Node.js Foundation}},
+ year = {2018},
+ title = {Node.js os Documentation},
+ url = {https://nodejs.org/api/os.html},
+ urldate = {2018-07-24}
 }
 
 
