--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -5,6 +5,7 @@
 % ------------------------------------------------------------------------------
 %\entry{Computer}{is a programmable machine that receives input, stores and manipulates data, and provides output in a useful format}
 
+\newacronym{ipc}{IPC}{Inter-process Communication}
 \newacronym{ui}{UI}{User Interface}
 \newacronym{ms}{MS}{Microsoft}
 \newacronym{mssql}{MSSQL}{Microsoft Structured Query Language}
