worked on accessing electron apis and menus

--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -247,6 +247,16 @@
 }
 
 
+@online{electronRequireError,
+ author = {Sohail},
+ year = {2017},
+ title = {How to use electron APIs inside angular2 app},
+ url = {https://discuss.atom.io/t/how-to-use-electron-apis-inside-angular2-app/41674/12},
+ address = {Atom Discuss},
+ urldate = {2018-07-25}
+}
+
+
 @online{fluentAPI,
  author = {Tutorials, Entity Framework},
  title = {Fluent API in Code-First},
@@ -383,6 +393,16 @@
 }
 
 
+@online{ngxElectron,
+ author = {Hans, Thorsten},
+ year = {2018},
+ title = {ngx-electron},
+ url = {https://github.com/ThorstenHans/ngx-electron},
+ address = {GitHub},
+ urldate = {2018-07-25}
+}
+
+
 @online{nodejs,
  author = {{Node.js Foundation}},
  year = {2018},
@@ -465,12 +485,31 @@
 }
 
 
+@online{topMenuItems,
+ author = {Cao, Mike},
+ year = {2017},
+ title = {Menu enabled/visible property doesn't affect top-level menu items},
+ url = {https://github.com/electron/electron/issues/8703},
+ address = {GitHub},
+ urldate = {2018-07-25}
+}
+
+
 @online{tpl,
  author = {Microsoft},
  year = {30.03.2017},
  title = {Task-based Asynchronous Programming},
  url = {https://docs.microsoft.com/en-us/dotnet/standard/parallel-programming/task-based-asynchronous-programming},
  urldate = {2018-02-02}
+}
+
+
+@online{zoneJS,
+ author = {Google},
+ year = {2018},
+ title = {Angular zone.js},
+ url = {https://github.com/angular/zone.js/},
+ urldate = {2018-07-25}
 }
 
 
